<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                 xmlns:app="http://schemas.android.com/apk/res-auto"
                                                 android:layout_width="match_parent"
                                                 android:layout_height="fill_parent">

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/nested_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="android.support.design.widget.AppBarLayout$ScrollingViewBehavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/base_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/dateBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:onClick="startDatePicker"
                android:text="Select Date"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <Button
                android:id="@+id/timeBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:onClick="startTimePicker"
                android:text="Select Time"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/dateBtn"/>

            <TextView
                android:id="@+id/date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:ems="10"
                android:onClick="startDatePicker"
                android:text="Date"
                app:layout_constraintBaseline_toBaselineOf="@+id/dateBtn"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toRightOf="@+id/dateBtn"
                app:layout_constraintRight_toRightOf="parent"/>

            <TextView
                android:id="@+id/secondLine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:ems="10"
                android:onClick="startTimePicker"
                android:text="Time"
                app:layout_constraintBaseline_toBaselineOf="@+id/timeBtn"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toRightOf="@+id/timeBtn"
                app:layout_constraintRight_toRightOf="parent"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/appendingLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/timeBtn">

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/editTextLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:text="Comment:"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/appendingLayout"
                />

            <EditText
                android:id="@+id/commentView"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="-1dp"
                android:layout_marginRight="4dp"
                android:background="@drawable/frame"
                android:ems="10"
                android:gravity="top"
                android:inputType="textMultiLine"
                android:lines="8"
                android:minLines="6"
                android:text=""
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextLabel"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>