<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent">

    <ImageButton
        android:id="@+id/mealBtn"
        android:layout_width="53dp"
        android:layout_height="49dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginBottom="0dp"
        android:background="@android:color/holo_green_light"
        android:contentDescription="Meal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/otherBtn"
        app:srcCompat="@drawable/event_meal_34dp"/>

    <ImageButton
        android:id="@+id/otherBtn"
        android:layout_width="53dp"
        android:layout_height="49dp"

        android:layout_alignParentTop="true"
        android:layout_marginBottom="0dp"
        android:layout_weight="1"
        android:background="@color/colorPurple"
        android:contentDescription="Other"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/mealBtn"
        app:layout_constraintRight_toLeftOf="@+id/exerciseBtn"
        app:srcCompat="@drawable/event_other_34dp"/>

    <ImageButton
        android:id="@+id/exerciseBtn"
        android:layout_width="53dp"
        android:layout_height="49dp"
        android:layout_marginBottom="0dp"
        android:layout_weight="1"
        android:background="@color/colorLightBlue"
        android:contentDescription="Exercise"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/otherBtn"
        app:layout_constraintRight_toLeftOf="@+id/bmBtn"
        app:srcCompat="@drawable/event_exercise_34dp"/>

    <ImageButton
        android:id="@+id/bmBtn"
        android:layout_width="53dp"
        android:layout_height="49dp"
        android:layout_marginBottom="0dp"
        android:layout_toEndOf="@id/exerciseBtn"
        android:layout_toRightOf="@id/exerciseBtn"
        android:layout_weight="1"
        android:background="@color/colorBrown"
        android:contentDescription="Bowel Movement"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/exerciseBtn"
        app:layout_constraintRight_toLeftOf="@+id/ratingBtn"
        app:srcCompat="@drawable/event_bm_34dp"/>

    <ImageButton
        android:id="@+id/ratingBtn"
        android:layout_width="53dp"
        android:layout_height="49dp"
        android:layout_marginBottom="0dp"
        android:layout_weight="1"
        android:background="@color/colorWineRed"
        android:contentDescription="Rating"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/bmBtn"
        app:layout_constraintRight_toRightOf="parent"
        app:srcCompat="@drawable/event_rating_34dp"/>
</android.support.constraint.ConstraintLayout>