<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_add_new"
        android:icon="@drawable/ic_add_circle_outline_white_48dp"
        android:title="Add"
        app:showAsAction="always"/>
</menu>