<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:id="@+id/mealContainer"
                                             android:layout_width="match_parent"
                                             android:layout_height="wrap_content"
                                             tools:context="com.johanlund.screens.event_activities.mvc_controllers.EventActivity">

    <TextView
        android:id="@+id/textView4"
...
